# Connect4

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: Board.hpp  Errors.hpp  Game.hpp  bot.hpp
source/: board.cpp  board.hpp  constants.hpp  game.hpp  lib.cpp  main.cpp
src/: Board.cpp  Game.cpp  bot.cpp  main.cpp
test/: CMakeLists.txt
test/source/: Connect4_test.cpp
